Hotkey is not displayed in the node editor's menu #39867

Closed
opened 2014-04-23 21:05:54 +02:00 by lopata · 8 comments

Win7 x64

blender-2.70-0f91d2c-win64-vc12

no_hotkey.blend

2.jpg

Win7 x64 blender-2.70-0f91d2c-win64-vc12 [no_hotkey.blend](https://archive.blender.org/developer/F85756/no_hotkey.blend) ![2.jpg](https://archive.blender.org/developer/F85759/2.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @lopataasdf

Added subscriber: @lopataasdf

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29

Okay, so issue here is comparing floats. Menu entry is set to exactly 0.833, while shortcut is set to exactly 0.83333, so menu func checking for shortcuts does not find any one valid for value 0.833.

We can simply fix this by making both values really the same, but I wonder if it would not be better to have some 'nearlyequal' comparison in idprop.c’s IDP_EqualsProperties_ex? Campbell, what do you think? Could this backfire in other places/cases? As far as I can see, the only use of this func is in wm_keymap.c…

Okay, so issue here is comparing floats. Menu entry is set to exactly 0.833, while shortcut is set to exactly 0.83333, so menu func checking for shortcuts does not find any one valid for value 0.833. We can simply fix this by making both values really the same, but I wonder if it would not be better to have some 'nearlyequal' comparison in idprop.c’s `IDP_EqualsProperties_ex`? Campbell, what do you think? Could this backfire in other places/cases? As far as I can see, the only use of this func is in wm_keymap.c…
Bastien Montagne self-assigned this 2014-04-23 22:17:15 +02:00

This issue was referenced by blender/blender-addons-contrib@258a9b5fc1

This issue was referenced by blender/blender-addons-contrib@258a9b5fc1f024a371bd43cefeb94a5b2d1f3ce5

This issue was referenced by 258a9b5fc1

This issue was referenced by 258a9b5fc1f024a371bd43cefeb94a5b2d1f3ce5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 258a9b5fc1.

Closed by commit 258a9b5fc1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39867
No description provided.