Fix T39867: Hotkey is not displayed in the node editor's menu.

Making both keymap and menu values the same, and adding a (debug only) check in
IDP_EqualsProperties_ex() warning when comparing two floats with nearly the same value.